## Process this file with automake to produce Makefile.in

libtekhne_includedir = $(pkgincludedir)

libtekhne_include_DATA = \
	AppDefs.h\
	ClassInfo.h\
	StandardDefs.h\
	tekhne.h\
	VAppFileInfo.h\
	VApplication.h\
	VArchivable.h\
	VAutoLock.h\
	VBlockCache.h\
	VDataIO.h\
	VDictionary.h\
	VErrors.h\
	VFindDirectory.h\
	VFont.h\
	VHandler.h\
	VHashable.h\
	VList.h\
	VLocker.h\
	VLooper.h\
	VMallocIO.h\
	VMemoryIO.h\
	VMessage.h\
	VMessageFilter.h\
	VMessageQueue.h\
	VMessageRunner.h\
	VMessenger.h\
	VMime.h\
	VNodeMonitor.h\
	VPoint.h\
	VPolygon.h\
	VPositionIO.h\
	VQuery.h\
	VRect.h\
	VRegion.h\
	VRoster.h\
	VShape.h\
	VStopWatch.h\
	VString.h\
	VTList.cc\
	VTList.h

EXTRA_DIST = $(libtekhne_include_DATA)
