## Process this file with automake to produce Makefile.in

libtekhne_includedir = $(pkgincludedir)

libtekhne_include_DATA = \
	AppDefs.h\
	GraphicsDefs.h\
	InterfaceDefs.h\
	ClassInfo.h\
	StandardDefs.h\
	tekhne.h\
	VAlert.h\
	VAppFileInfo.h\
	VApplication.h\
	VArchivable.h\
	VAutoLock.h\
	VBlockCache.h\
	VClipboard.h\
	VControl.h\
	VDataIO.h\
	VDictionary.h\
	VErrors.h\
	VFindDirectory.h\
	VFont.h\
	VHandler.h\
	VHashable.h\
	VList.h\
	VListView.h\
	VLocker.h\
	VLooper.h\
	VMallocIO.h\
	VMemoryIO.h\
	VMenu.h\
	VMenuBar.h\
	VMessage.h\
	VMessageFilter.h\
	VMessageQueue.h\
	VMessageRunner.h\
	VMessenger.h\
	VMime.h\
	VNodeMonitor.h\
	VPoint.h\
	VPolygon.h\
	VPositionIO.h\
	VQuery.h\
	VRect.h\
	VRegion.h\
	VRoster.h\
	VScreen.h\
	VScrollBar.h\
	VSerialPort.h\
	VShape.h\
	VShapeIterator.h\
	VStopWatch.h\
	VString.h\
	VTextView.h\
	VTList.cc\
	VTList.h\
	VView.h\
	VWindow.h


EXTRA_DIST = $(libtekhne_include_DATA)
