## Process this file with automake to produce Makefile.in

libtekhne_includedir = $(pkgincludedir)

libtekhne_include_DATA = \
	AppDefs.h\
	GraphicsDefs.h\
	InterfaceDefs.h\
	StorageDefs.h\
	ClassInfo.h\
	StandardDefs.h\
	tekhne.h\
	VAlert.h\
	VAppFileInfo.h\
	VApplication.h\
	VArchivable.h\
	VAutoLock.h\
	VBlockCache.h\
	VClipboard.h\
	VControl.h\
	VDataIO.h\
	VDictionary.h\
	VDirectory.h\
	VEntry.h\
	VEntryList.h\
	VErrors.h\
	VFile.h\
	VFindDirectory.h\
	VFlattenable.h\
	VFont.h\
	VHandler.h\
	VHashable.h\
	VList.h\
	VListView.h\
	VLocker.h\
	VLooper.h\
	VMallocIO.h\
	VMemoryIO.h\
	VMenu.h\
	VMenuBar.h\
	VMessage.h\
	VMessageFilter.h\
	VMessageQueue.h\
	VMessageRunner.h\
	VMessenger.h\
	VMime.h\
	VNodeMonitor.h\
	VPath.h\
	VPoint.h\
	VPolygon.h\
	VPositionIO.h\
	VQuery.h\
	VRect.h\
	VRegion.h\
	VRoster.h\
	VScreen.h\
	VScrollBar.h\
	VSerialPort.h\
	VShape.h\
	VShapeIterator.h\
	VStatable.h\
	VStopWatch.h\
	VString.h\
	VSymLink.h\
	VTextView.h\
	VTList.cc\
	VTList.h\
	VView.h\
	VWindow.h


EXTRA_DIST = $(libtekhne_include_DATA)
