## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

test_includedir = $(pkgincludedir)

test_include_DATA = \
	ThreadTest.h\
	VBlockCacheTest.h\
	VMallocIOTest.h\
	VMessageTest.h\
	VPointTest.h\
	VStringTest.h\
	VListTest.h

EXTRA_DIST = $(test_include_DATA)
