## Process this file with automake to produce Makefile.in

test_includedir = $(pkgincludedir)

test_include_DATA = \
	ThreadTest.h\
	VBlockCacheTest.h\
	VMallocIOTest.h\
	VMessageTest.h\
	VPointTest.h\
	VStringTest.h\
	VListTest.h \
	VTListTest.h \
	VMessengerTest.h

EXTRA_DIST = $(test_include_DATA)
